--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.5",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "maatwebsite/excel": "*",
+        "phpoffice/phpspreadsheet": "dev-NumberFormatMask-Helpers",
+        "spatie/laravel-query-builder": "^5.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
